# ai_assitant

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
db/: chroma.sqlite3
src/: add_doc.py  db_ops.py  embedd.py  load_data.py  search.py  tempCodeRunnerFile.py  vector_store.py
