[project]
name = "rag-langchain-assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-text-splitters>=1.0.0",
    "sentence-transformers>=5.1.2",
    "validator>=0.7.1",
    "validators>=0.35.0",
]
