[project]
name = "rag-langchain-assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "chromadb>=1.3.0",
 "langchain>=1.0.3",
 "langchain-community>=0.4.1",
 "langchain-google-genai>=3.0.1",
 "langchain-text-splitters>=1.0.0",
 "sentence-transformers>=5.1.2",
 "validators>=0.35.0",
]
